# GTD

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml  test-install-run.yml
ci/: build.sh  install.sh  send.sh  send_drive.sh
grafana/: Dockerfile  docker-compose.yml
grafana/provisioning/datasources/: infinity.yaml
gtd/: __main__.py  attachments.py  command_executor.py  config.py  drive.py  extensions.py  importer.py  jira.py  maintenance.py  meals.py  notes_exercise.py  style.py  utils.py
gtd/test/: __main__.py  test_trello.py
gtd/trello/: __init__.py  __main__.py
scripts/: board.sh
systemd/: backup.sh  run.sh
